# slurm-schmutz

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
config/: config.yaml
docs/: storage-report-README.md
scripts/: merge-motd  schmutz  scmd  storage-report
src/ood_job_monitor/: __init__.py  cli.py  config.py  job_stats.py  session_card.py
tests/: __init__.py  test_config.py  test_job_stats.py  test_session_card.py
